# ezjson

./: .gitignore  CMakeLists.txt
include/: ezjson.h
include/ezjson/: api.h  json.h
source/: ezjson.c
source/ezjson/: json.c
test/: arrays.c  example1.c  example1.json  example2.c  example2.json  examples.c  numbers.c  pointers.c  pointers.json  string2.json  strings.c
